--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -32,7 +32,7 @@ sites:
 status-website:
   cname: status.hacktj.org
   # Uncomment the following line if you don't have a custom domain and add your repo name
-  baseUrl: /status
+  # baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/HackTJ/status/master/logo.svg
   name: HackTJ Status
   introTitle: "The official HackTJ uptime monitor and status page."
